--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   panorama_viewer: ^1.0.6
   flutter_tts: ^4.0.2
   audioplayers: ^6.1.0
+  firebase_core: ^3.5.0
+  cloud_firestore: ^5.4.2
+  cached_network_image: ^3.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
