--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
   flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
+  flutter_gemini: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
